# bazel-nogo-lint

./: .gitignore  BUILD.bazel  Makefile.bazel  README.md  WORKSPACE  bazel-genfiles  bazel-golinters  bazel-out  bazel-testlogs  go.mod  go.sum  golinter.go  test.patch
.bazel/: bazel.bash  nogo-config.json
cmd/: BUILD.bazel  main.go
files/: adjacency.bazel  build_BUILD.bazel  cgo_BUILD.bazel  data.bazel  entropy.bazel  fastwalk__BUILD.bazel  frequency.bazel  fwalk.bazel  gopath_BUILD.bazel  gosec_BUILD.bazel  loader_BUILD.bazel  match.bazel  matching.bazel  math.bazel  nbutton_BUILD.bazel  packages_BUILD.bazel  pdriver_BUILD.bazel  rules_BUILD.bazel  scoring.bazel  semver_BUILD.bazel  ssautil_BUILD.bazel
pkg/III/: BUILD.bazel  III.go
pkg/bodyclose/: BUILD.bazel
pkg/config/: BUILD.bazel  config.go
pkg/deadcode/: BUILD.bazel  deadcode.go
pkg/depguard/: BUILD.bazel  depguard.go
pkg/dupl/: BUILD.bazel  dupl.go
pkg/errcheck/: BUILD.bazel  errcheck.go
pkg/fsutils/: BUILD.bazel  fsutils.go
pkg/gochecknoglobals/: BUILD.bazel  gochecknoglobals.go
pkg/gochecknoinits/: BUILD.bazel  gochecknoinits.go
pkg/goconst/: BUILD.bazel  goconst.go
pkg/gocritic/: BUILD.bazel  gocritic.go
pkg/gocyclo/: BUILD.bazel  gocyclo.go
pkg/golint/: BUILD.bazel  golint.go
pkg/gosec/: BUILD.bazel  gosec.go
pkg/ineffassign/: BUILD.bazel  ineffassign.go
pkg/interfacer/: BUILD.bazel  interfacer.go
pkg/lll/: BUILD.bazel  lll.go
pkg/maligned/: BUILD.bazel  maligned.go
pkg/megacheck/: BUILD.bazel  megacheck.go
pkg/misspell/: BUILD.bazel  misspell.go
pkg/nakedret/: BUILD.bazel  nakedret.go
pkg/prealloc/: BUILD.bazel  prealloc.go
pkg/result/: BUILD.bazel  issue.go
pkg/scopelint/: BUILD.bazel  scopelint.go
pkg/structcheck/: BUILD.bazel  structcheck.go
pkg/unconvert/: BUILD.bazel  unconvert.go
pkg/unparam/: BUILD.bazel  unparam.go
pkg/util/: BUILD.bazel  util.go
pkg/varcheck/: BUILD.bazel  varcheck.go
