load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["adjcmartix.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/adjacency",
    visibility = ["//visibility:public"],
    deps = ["//data:go_default_library"],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["adjcmartix.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/adjacency",
    visibility = ["//visibility:public"],
    deps = ["//data:go_tool_library"],
)


go_test(
    name = "go_default_test",
    srcs = ["adjacmartix_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
