load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["entropyCalculator.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/entropy",
    visibility = ["//visibility:public"],
    deps = [
        "//adjacency:go_default_library",
        "//match:go_default_library",
        "//utils/math:go_default_library",
    ],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["entropyCalculator.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/entropy",
    visibility = ["//visibility:public"],
    deps = [
        "//adjacency:go_tool_library",
        "//match:go_tool_library",
        "//utils/math:go_tool_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["entropyCalculator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//match:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
