load("@io_bazel_rules_go//go:def.bzl", "go_library","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["frequency.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/frequency",
    visibility = ["//visibility:public"],
    deps = ["//data:go_default_library"],
)
go_tool_library(
    name = "go_tool_library",
    srcs = ["frequency.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/frequency",
    visibility = ["//visibility:public"],
    deps = ["//data:go_tool_library"],
)
