load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fastwalk.go",
        "fastwalk_dirent_fileno.go",
        "fastwalk_dirent_ino.go",
        "fastwalk_dirent_namlen_bsd.go",
        "fastwalk_dirent_namlen_linux.go",
        "fastwalk_portable.go",
        "fastwalk_unix.go",
    ],
    importpath = "golang.org/x/tools/internal/fastwalk",
    visibility = ["//:__subpackages__"],
)

go_tool_library(
    name = "go_tool_library",
    srcs = [
        "fastwalk.go",
        "fastwalk_dirent_fileno.go",
        "fastwalk_dirent_ino.go",
        "fastwalk_dirent_namlen_bsd.go",
        "fastwalk_dirent_namlen_linux.go",
        "fastwalk_portable.go",
        "fastwalk_unix.go",
    ],
    importpath = "golang.org/x/tools/internal/fastwalk",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["fastwalk_test.go"],
    embed = [":go_default_library"],
)
