load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["walk.go"],
    importpath = "golang.org/x/tools/internal/gopathwalk",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/fastwalk:go_default_library"],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["walk.go"],
    importpath = "golang.org/x/tools/internal/gopathwalk",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/fastwalk:go_tool_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["walk_test.go"],
    embed = [":go_default_library"],
)
