load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "loader.go",
        "util.go",
    ],
    importpath = "golang.org/x/tools/go/loader",
    visibility = ["//visibility:public"],
    deps = [
        "//go/ast/astutil:go_default_library",
        "//go/buildutil:go_default_library",
        "//go/internal/cgo:go_default_library",
    ],
)

go_tool_library(
    name = "go_tool_library",
    srcs = [
        "doc.go",
        "loader.go",
        "util.go",
    ],
    importpath = "golang.org/x/tools/go/loader",
    visibility = ["//visibility:public"],
    deps = [
        "//go/ast/astutil:go_tool_library",
        "//go/buildutil:go_tool_library",
        "//go/internal/cgo:go_tool_library",
    ],
)


go_test(
    name = "go_default_test",
    srcs = [
        "example_test.go",
        "loader_test.go",
        "stdlib_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//go/buildutil:go_default_library"],
)
