load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["mathutils.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/utils/math",
    visibility = ["//visibility:public"],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["mathutils.go"],
    importpath = "github.com/nbutton23/zxcvbn-go/utils/math",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["mathutils_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
