load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["zxcvbn.go"],
    importpath = "github.com/nbutton23/zxcvbn-go",
    visibility = ["//visibility:public"],
    deps = [
        "//match:go_default_library",
        "//matching:go_default_library",
        "//scoring:go_default_library",
        "//utils/math:go_default_library",
    ],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["zxcvbn.go"],
    importpath = "github.com/nbutton23/zxcvbn-go",
    visibility = ["//visibility:public"],
    deps = [
        "//match:go_tool_library",
        "//matching:go_tool_library",
        "//scoring:go_tool_library",
        "//utils/math:go_tool_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["zxcvbn_test.go"],
    embed = [":go_default_library"],
)
