load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "external.go",
        "golist.go",
        "golist_overlay.go",
        "packages.go",
        "visit.go",
    ],
    importpath = "golang.org/x/tools/go/packages",
    visibility = ["//visibility:public"],
    deps = [
        "//go/gcexportdata:go_default_library",
        "//go/internal/packagesdriver:go_default_library",
        "//internal/gopathwalk:go_default_library",
        "//internal/semver:go_default_library",
    ],
)

go_tool_library(
    name = "go_tool_library",
    srcs = [
        "doc.go",
        "external.go",
        "golist.go",
        "golist_overlay.go",
        "packages.go",
        "visit.go",
    ],
    importpath = "golang.org/x/tools/go/packages",
    visibility = ["//visibility:public"],
    deps = [
        "//go/gcexportdata:go_tool_library",
        "//go/internal/packagesdriver:go_tool_library",
        "//internal/gopathwalk:go_tool_library",
        "//internal/semver:go_tool_library",
    ],
)
go_test(
    name = "go_default_test",
    srcs = [
        "example_test.go",
        "packages110_test.go",
        "packages_test.go",
        "packagescgo_test.go",
        "stdlib_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//go/packages/packagestest:go_default_library"],
)
