load("@io_bazel_rules_go//go:def.bzl", "go_library","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["sizes.go"],
    importpath = "golang.org/x/tools/go/internal/packagesdriver",
    visibility = ["//go:__subpackages__"],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["sizes.go"],
    importpath = "golang.org/x/tools/go/internal/packagesdriver",
    visibility = ["//go:__subpackages__"],
)
