load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = [
        "archive.go",
        "big.go",
        "bind.go",
        "blacklist.go",
        "errors.go",
        "fileperms.go",
        "hardcoded_credentials.go",
        "rand.go",
        "readfile.go",
        "rsa.go",
        "rulelist.go",
        "sql.go",
        "ssh.go",
        "ssrf.go",
        "subproc.go",
        "tempfiles.go",
        "templates.go",
        "tls.go",
        "tls_config.go",
        "unsafe.go",
        "weakcrypto.go",
    ],
    importpath = "github.com/golangci/gosec/rules",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_nbutton23_zxcvbn_go//:go_default_library",
    ],
)

go_tool_library(
    name = "go_tool_library",
    srcs = [
        "archive.go",
        "big.go",
        "bind.go",
        "blacklist.go",
        "errors.go",
        "fileperms.go",
        "hardcoded_credentials.go",
        "rand.go",
        "readfile.go",
        "rsa.go",
        "rulelist.go",
        "sql.go",
        "ssh.go",
        "ssrf.go",
        "subproc.go",
        "tempfiles.go",
        "templates.go",
        "tls.go",
        "tls_config.go",
        "unsafe.go",
        "weakcrypto.go",
    ],
    importpath = "github.com/golangci/gosec/rules",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_tool_library",
        "@com_github_nbutton23_zxcvbn_go//:go_tool_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "rules_suite_test.go",
        "rules_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//testutils:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
