load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["semver.go"],
    importpath = "golang.org/x/tools/internal/semver",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "go_tool_library",
    srcs = ["semver.go"],
    importpath = "golang.org/x/tools/internal/semver",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["semver_test.go"],
    embed = [":go_default_library"],
)
