load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test","go_tool_library")

go_library(
    name = "go_default_library",
    srcs = [
        "load.go",
        "switch.go",
        "visit.go",
    ],
    importpath = "golang.org/x/tools/go/ssa/ssautil",
    visibility = ["//visibility:public"],
    deps = [
        "//go/loader:go_default_library",
        "//go/packages:go_default_library",
        "//go/ssa:go_default_library",
    ],
)

go_tool_library(
    name = "go_tool_library",
    srcs = [
        "load.go",
        "switch.go",
        "visit.go",
    ],
    importpath = "golang.org/x/tools/go/ssa/ssautil",
    visibility = ["//visibility:public"],
    deps = [
        "//go/loader:go_tool_library",
        "//go/packages:go_tool_library",
        "//go/ssa:go_tool_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "load_test.go",
        "switch_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/packages:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//go/loader:go_default_library",
            "//go/ssa:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
