load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["bodyclose.go"],
    importpath = "golang.cisco.com/golinters/pkg/bodyclose",
    visibility = ["//visibility:public"],
    deps = ["@com_github_timakin_bodyclose//passes/bodyclose:go_default_library"],
)

go_tool_library(
    name = "bodyclose",
    srcs = ["bodyclose.go"],
    importpath = "golang.cisco.com/golinters/pkg",
    deps = [
        "@org_golang_x_tools//go/analysis:go_tool_library",
        "@com_github_timakin_bodyclose//passes/bodyclose:go_tool_library",
    ],
    visibility = ["//visibility:public"],
)
