load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "deadcode",
    srcs = ["deadcode.go"],
    importpath = "github.com/anuvu/bazel-nogo-lint/pkg/deadcode",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/result:go_tool_library",
        "//pkg/util:go_tool_library",
        "@com_github_golangci_go_misc//deadcode:go_tool_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
        "@org_golang_x_tools//go/loader:go_tool_library",
    ],
)
