load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "dupl",
    srcs = ["dupl.go"],
    importpath = "github.com/anuvu/bazel-nogo-lint/pkg/dupl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_tool_library",
        "//pkg/fsutils:go_tool_library",
        "//pkg/result:go_tool_library",
        "//pkg/util:go_tool_library",
        "@com_github_golangci_dupl//:go_tool_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
    ],
)
