load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_tool_library")

go_tool_library(
    name = "fsutils",
    srcs = ["fsutils.go"],
    importpath = "github.com/anuvu/bazel-nogo-lint/pkg/fsutils",
    visibility = ["//visibility:public"],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["fsutils.go"],
    importpath = "github.com/anuvu/bazel-nogo-lint/pkg/fsutils",
    visibility = ["//visibility:public"],
)
