load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gochecknoglobals.go"],
    importpath = "golang.cisco.com/golinters/pkg/gochecknoglobals",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "@org_golang_x_tools//go/analysis:go_default_library",
    ],
)

