load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "gochecknoglobals",
    srcs = ["gochecknoglobals.go"],
    importpath = "github.com/anuvu/bazel-nogo-lint/pkg/gochecknoglobals",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_tool_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
    ],
)
